# Language-Processing-100

./: .gitignore  README.md
1/: main.hs
2/: cabal.sandbox.config
eight/: eight.cabal
eight/src/: Lib.hs
eighteen/: eighteen.cabal
eighteen/src/: Lib.hs
eleven/: eleven.cabal
eleven/src/: Lib.hs
fifteen/: fifteen.cabal
fifteen/src/: Lib.hs
fifty/: README.md  fifty.cabal  stack.yaml
fifty-three/: README.md  fifty-three.cabal  sample.xml
fifty-three/src/: Lib.hs
fifty/src/: Lib.hs
five/: five.cabal
five/src/: Lib.hs
fortheen/: fortheen.cabal
fortheen/src/: Lib.hs
forty/: README.md  forty.cabal  stack.yaml
forty-one/: README.md  forty-one.cabal  stack.yaml
forty-one/src/: Lib.hs
forty-two/: README.md  forty-two.cabal
forty-two/src/: Lib.hs
forty-two/test/: Spec.hs
forty/src/: Lib.hs
four/: four.cabal
four/src/: Lib.hs
fourty-eight/: README.md  fourty-eight.cabal  sample.txt  stack.yaml
fourty-eight/src/: Lib.hs
nine/: nine.cabal
nine/src/: Lib.hs
nineteen/: nineteen.cabal
nineteen/src/: Lib.hs
one/: main
seven/: seven.cabal
seven/src/: Lib.hs
seventeen/: seventeen.cabal
seventeen/src/: Lib.hs
six/: six.cabal
six/src/: Lib.hs
sixteen/: sixteen.cabal
sixteen/src/: Lib.hs
ten/: ten.cabal
ten/src/: Lib.hs
thirteen/: LICENSE  thirteen.cabal
thirteen/src/: Lib.hs
thirty-eight/: README.md  thirty-eight.cabal
thirty-eight/src/: Lib.hs
thirty-five/: README.md  stack.yaml  thirty-five.cabal
thirty-five/src/: Lib.hs
thirty-four/: README.md  thirty-four.cabal
thirty-four/src/: Lib.hs
thirty-nine/: README.md  thirty-nine.cabal
thirty-nine/src/: Lib.hs
thirty-one/: stack.yaml  thirty-one.cabal
thirty-one/src/: Lib.hs
thirty-six/: README.md  stack.yaml  thirty-six.cabal
thirty-six/src/: Lib.hs
thirty-three/: README.md  thirty-three.cabal
thirty-three/src/: Lib.hs
thirty-two/: thirty-two.cabal
thirty-two/src/: Lib.hs
three/: three.cabal
three/src/: Lib.hs
twelve/: twelve.cabal
twelve/src/: Lib.hs
twenty/: twenty.cabal
twenty-five/: twenty-five.cabal
twenty-five/src/: Lib.hs
twenty-four/: twenty-four.cabal
twenty-four/src/: Lib.hs
twenty-one/: twenty-one.cabal
twenty-one/src/: Lib.hs
twenty-three/: twenty-three.cabal
twenty-three/src/: Lib.hs
twenty-two/: twenty-two.cabal
twenty-two/src/: Lib.hs
twenty/src/: Lib.hs
two/: ChangeLog.md  main.hs  x2.cabal
